POWR-1455 had to re-do the event date and time groups on calendar item default display (overwritten by rebase?)

--- a/web/sites/default/config/core.entity_view_display.node.calendar_item.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.calendar_item.default.yml
@@ -16,15 +16,59 @@ dependencies:
     - node.type.calendar_item
   module:
     - datetime
+    - ds
+    - field_group
+    - taxonomy
     - time_field
     - user
+third_party_settings:
+  field_group:
+    group_date:
+      children:
+        - field_start_date
+        - field_end_date
+      parent_name: ''
+      weight: 0
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Event date'
+      region: content
+    group_time:
+      children:
+        - field_all_day
+        - field_start_time
+        - field_end_time
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        id: ''
+        classes: ''
+        element: div
+        show_label: false
+        label_element: h3
+        label_element_classes: ''
+        attributes: ''
+        effect: none
+        speed: fast
+      label: 'Event time'
+      region: content
 id: node.calendar_item.default
 targetEntityType: node
 bundle: calendar_item
 mode: default
 content:
   field_all_day:
-    weight: 7
+    weight: 5
     label: hidden
     settings:
       format: custom
@@ -56,7 +100,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_end_date:
-    weight: 6
+    weight: 4
     label: hidden
     settings:
       timezone_override: ''
@@ -72,7 +116,7 @@ content:
     type: datetime_default
     region: content
   field_end_time:
-    weight: 9
+    weight: 7
     label: hidden
     settings:
       time_format: 'g:i a'
@@ -95,7 +139,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
   field_start_date:
-    weight: 5
+    weight: 3
     label: hidden
     settings:
       timezone_override: ''
@@ -111,7 +155,7 @@ content:
     type: datetime_default
     region: content
   field_start_time:
-    weight: 8
+    weight: 6
     label: hidden
     settings:
       time_format: 'g:i a'
