POWR-1353 Add conditional fields patches for map form in entity browser.

--- a/web/sites/default/config/core.entity_form_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.map.default.yml
@@ -45,7 +45,26 @@ content:
                 value: 'Geo file'
             effect: show
             effect_options: {  }
+            selector: '#edit-inline-entity-form-field-map-type'
+            form_mode: default
+          entity_type: media
+          bundle: map
+        529c9a05-8876-4302-9025-d91435a03a4c:
+          dependee: field_map_type
+          settings:
+            state: '!visible'
+            condition: value
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              -
+                value: 'Google Map embed'
+            effect: show
+            effect_options: {  }
             selector: ''
+            form_mode: default
           entity_type: media
           bundle: map
     type: file_generic
