--- a/web/sites/default/config/core.entity_form_display.media.map.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.map.media_browser.yml
@@ -4,19 +4,32 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_browser
+    - field.field.media.map.field_geo_file
+    - field.field.media.map.field_map_type
     - field.field.media.map.field_media_in_library
     - field.field.media.map.field_media_video_embed_field
     - field.field.media.map.field_summary
     - field.field.media.map.image
     - media.type.map
+    - workflows.workflow.media
   module:
+    - conditional_fields
     - content_moderation
+    - file
     - path
 id: media.map.media_browser
 targetEntityType: media
 bundle: map
 mode: media_browser
 content:
+  field_geo_file:
+    third_party_settings:
+      conditional_fields: {  }
+    weight: 26
+    settings:
+      progress_indicator: throbber
+    type: file_generic
+    region: content
   field_media_in_library:
     type: boolean_checkbox
     weight: 1
@@ -58,6 +71,7 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_map_type: true
   field_media_video_embed_field: true
   field_summary: true
   group_content: true
