--- a/composer.json
+++ b/composer.json
@@ -233,6 +233,10 @@
             },
             "drupal/leaflet": {
                 "POWR-1352 Show multiple base layers at once": "patches/leaflet-multiple-base-layer.patch"
+            },
+            "drupal/conditional_fields": {
+                "POWR-1353 3063330-Support for non-default form modes": "https://www.drupal.org/files/issues/2019-07-30/conditional_fields-3063330-11-custom-form-modes.patch",
+                "POWR-1353 3063335-Support for Entity Browser": "https://www.drupal.org/files/issues/2019-10-08/conditional_fields-3063335-8-entity-browser-support.patch"
             }
         },
         "merge-plugin": {
