--- a/web/modules/custom/portland/modules/portland_leaftlet_maps/portland_leaflet_maps.libraries.yml
+++ b/web/modules/custom/portland/modules/portland_leaftlet_maps/portland_leaflet_maps.libraries.yml
@@ -3,6 +3,7 @@ portland_leaflet_maps:
       portland_leaflet_maps.js: {}
       esri-leaflet-2.3.0.js: {}
       shp-3.4.3.js: {}
+      encoding-indexes.js: {}
     dependencies:
       - leaflet/leaflet
       - core/jquery
