--- a/web/modules/custom/portland/modules/portland_leaftlet_maps/portland_leaflet_maps.libraries.yml
+++ b/web/modules/custom/portland/modules/portland_leaftlet_maps/portland_leaflet_maps.libraries.yml
@@ -7,3 +7,7 @@ portland_leaflet_maps:
       - leaflet/leaflet
       - core/jquery
       - core/drupal
+portland_textencoder:
+    js:
+      encoding.js: {}
+      encoding-indexes.js: {}
