--- a/.lando.yml
+++ b/.lando.yml
@@ -32,6 +32,7 @@ services:
         NODE_EXTRA_CA_CERTS: /app/cop_ca.pem
     run_as_root:
       - /bin/sh -c "adduser www-data node"
+      - /bin/sh -c "adduser www-data dialout"
       - /bin/sh -c "adduser node dialout"
       - /bin/sh -c "chmod -R 775 /var/www"
     run:
@@ -54,6 +55,7 @@ services:
 
 events:
   post-start:
+    - node: /bin/sh -c "chmod -R 775 /var/www"
     - node: echo "Updating npm..."
     - node: npm install -g npm
     - node: echo "Building theme asset files..."
