POWR-1143 initial changes to readme and fix for config conflict

--- a/web/sites/default/config/core.entity_view_display.media.map.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.default.yml
@@ -16,6 +16,11 @@ targetEntityType: media
 bundle: map
 mode: default
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   field_media_video_embed_field:
     weight: 2
     label: hidden
