--- a/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.embedded.yml
@@ -17,6 +17,11 @@ targetEntityType: media
 bundle: map
 mode: embedded
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   field_media_video_embed_field:
     weight: 0
     label: hidden
