--- a/web/sites/default/config/core.entity_view_display.media.map.thumbnail.yml
+++ b/web/sites/default/config/core.entity_view_display.media.map.thumbnail.yml
@@ -16,6 +16,11 @@ targetEntityType: media
 bundle: map
 mode: thumbnail
 content:
+  content_moderation_control:
+    weight: -20
+    settings: {  }
+    third_party_settings: {  }
+    region: content
   image:
     type: image
     weight: 0
