POWR-1490 Add new fields to Service Location

--- a/web/sites/default/config/field.field.node.service_location.field_location.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_location.yml
@@ -1,10 +1,10 @@
-uuid: 238c9d07-c1c2-4984-83dc-07786a0a602c
+uuid: 026c669b-453d-4eda-8c3f-3565c40e5dbc
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_building
-    - node.type.building
+    - field.storage.node.field_location
+    - node.type.location
     - node.type.service_location
   module:
     - custom_add_another
@@ -12,21 +12,21 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.service_location.field_building
-field_name: field_building
+id: node.service_location.field_location
+field_name: field_location
 entity_type: node
 bundle: service_location
-label: Building
+label: Location
 description: ''
-required: false
-translatable: false
+required: true
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:node'
   handler_settings:
     target_bundles:
-      building: building
+      location: location
     sort:
       field: _none
     auto_create: false
