--- a/web/sites/default/config/field.field.node.service_location.field_service_location_type.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_service_location_type.yml
@@ -1,34 +1,35 @@
-uuid: 238c9d07-c1c2-4984-83dc-07786a0a602c
+uuid: 453359f3-071e-4273-8453-d4c3812dabbb
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_building
-    - node.type.building
+    - field.storage.node.field_service_location_type
     - node.type.service_location
+    - taxonomy.vocabulary.service_location_type
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.service_location.field_building
-field_name: field_building
+id: node.service_location.field_service_location_type
+field_name: field_service_location_type
 entity_type: node
 bundle: service_location
-label: Building
+label: Type
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:node'
+  handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      building: building
+      service_location_type: service_location_type
     sort:
-      field: _none
+      field: name
+      direction: asc
     auto_create: false
     auto_create_bundle: ''
 field_type: entity_reference
