--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -3,14 +3,20 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.service_location.field_body_content
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
     - field.field.node.service_location.field_legacy_path
+    - field.field.node.service_location.field_location
     - field.field.node.service_location.field_open_hours
+    - field.field.node.service_location.field_portlandmaps_id
+    - field.field.node.service_location.field_portlandmaps_layer
+    - field.field.node.service_location.field_service_location_type
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
     - ds
+    - text
     - user
 third_party_settings:
   ds:
@@ -22,33 +28,42 @@ third_party_settings:
       settings: {  }
     regions:
       content:
-        - field_summary
-        - field_building
-        - field_floor
-        - field_open_hours
+        - field_service_location_type
+        - field_location
         - service_location_directions_link_entity_view_1
+        - field_open_hours
+        - field_summary
+        - field_body_content
+        - locations_eva_service_locaton_map
 id: node.service_location.default
 targetEntityType: node
 bundle: service_location
 mode: default
 content:
-  field_building:
-    weight: 1
+  field_body_content:
+    type: text_default
+    weight: 5
+    region: content
     label: hidden
-    settings:
-      view_mode: address
-      link: false
+    settings: {  }
     third_party_settings: {  }
+  field_location:
     type: entity_reference_entity_view
+    weight: 1
     region: content
-  field_floor:
-    weight: 2
     label: hidden
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_open_hours:
     weight: 3
     label: hidden
@@ -57,8 +72,16 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_summary:
+  field_service_location_type:
     weight: 0
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_summary:
+    weight: 4
     label: hidden
     settings:
       link_to_entity: false
@@ -93,14 +116,23 @@ content:
             fi-def-at: false
     type: string
     region: content
+  locations_eva_service_locaton_map:
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   service_location_directions_link_entity_view_1:
-    weight: 4
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_building: true
+  field_floor: true
   field_legacy_path: true
+  field_portlandmaps_id: true
+  field_portlandmaps_layer: true
   group_content: true
   links: true
   scheduled_publication: true
