--- a/web/sites/default/config/field.field.node.service_location.field_portlandmaps_layer.yml
+++ b/web/sites/default/config/field.field.node.service_location.field_portlandmaps_layer.yml
@@ -1,9 +1,9 @@
-uuid: ea6b817d-08b1-4106-b816-10a5c5d290a7
+uuid: 9814482d-5c65-4daa-8757-1643afd425a5
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_open_hours
+    - field.storage.node.field_portlandmaps_layer
     - node.type.service_location
   module:
     - custom_add_another
@@ -11,14 +11,14 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.service_location.field_open_hours
-field_name: field_open_hours
+id: node.service_location.field_portlandmaps_layer
+field_name: field_portlandmaps_layer
 entity_type: node
 bundle: service_location
-label: 'Open hours'
+label: 'PortlandMaps Layer'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
