--- a/web/sites/default/config/field.storage.node.field_floor.yml
+++ b/web/sites/default/config/field.storage.node.field_floor.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: private
 id: node.field_floor
 field_name: field_floor
 entity_type: node
