--- a/web/sites/default/config/field.storage.node.field_service_location_type.yml
+++ b/web/sites/default/config/field.storage.node.field_service_location_type.yml
@@ -1,19 +1,20 @@
-uuid: 21081de6-3644-4358-bff6-2fb9ad50bfc4
+uuid: 99cb10eb-f740-436e-941a-33bb104728da
 langcode: en
 status: true
 dependencies:
   module:
     - field_permissions
     - node
+    - taxonomy
 third_party_settings:
   field_permissions:
-    permission_type: private
-id: node.field_building
-field_name: field_building
+    permission_type: public
+id: node.field_service_location_type
+field_name: field_service_location_type
 entity_type: node
 type: entity_reference
 settings:
-  target_type: node
+  target_type: taxonomy_term
 module: core
 locked: false
 cardinality: 1
