POWR-1428 enabled charter, code and policy types for Program, updated permissions

--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -20,12 +20,15 @@ permissions:
   - 'create group_media:image entity'
   - 'create group_media:map entity'
   - 'create group_media:video entity'
+  - 'create group_node:city_charter entity'
+  - 'create group_node:city_code entity'
   - 'create group_node:city_service entity'
   - 'create group_node:development_permit entity'
   - 'create group_node:event entity'
   - 'create group_node:news entity'
   - 'create group_node:notification entity'
   - 'create group_node:page entity'
+  - 'create group_node:policy entity'
   - 'delete any group_media:audio content'
   - 'delete any group_media:audio entity'
   - 'delete any group_media:document content'
@@ -36,6 +39,10 @@ permissions:
   - 'delete any group_media:map entity'
   - 'delete any group_media:video content'
   - 'delete any group_media:video entity'
+  - 'delete any group_node:city_charter content'
+  - 'delete any group_node:city_charter entity'
+  - 'delete any group_node:city_code content'
+  - 'delete any group_node:city_code entity'
   - 'delete any group_node:city_service content'
   - 'delete any group_node:city_service entity'
   - 'delete any group_node:development_permit content'
@@ -48,6 +55,8 @@ permissions:
   - 'delete any group_node:notification entity'
   - 'delete any group_node:page content'
   - 'delete any group_node:page entity'
+  - 'delete any group_node:policy content'
+  - 'delete any group_node:policy entity'
   - 'delete own group_media:audio content'
   - 'delete own group_media:audio entity'
   - 'delete own group_media:document content'
@@ -58,6 +67,10 @@ permissions:
   - 'delete own group_media:map entity'
   - 'delete own group_media:video content'
   - 'delete own group_media:video entity'
+  - 'delete own group_node:city_charter content'
+  - 'delete own group_node:city_charter entity'
+  - 'delete own group_node:city_code content'
+  - 'delete own group_node:city_code entity'
   - 'delete own group_node:city_service content'
   - 'delete own group_node:city_service entity'
   - 'delete own group_node:development_permit content'
@@ -70,6 +83,7 @@ permissions:
   - 'delete own group_node:notification entity'
   - 'delete own group_node:page content'
   - 'delete own group_node:page entity'
+  - 'delete own group_node:policy content'
   - 'edit group'
   - 'leave group'
   - 'update any group_media:audio content'
@@ -82,6 +96,10 @@ permissions:
   - 'update any group_media:map entity'
   - 'update any group_media:video content'
   - 'update any group_media:video entity'
+  - 'update any group_node:city_charter content'
+  - 'update any group_node:city_charter entity'
+  - 'update any group_node:city_code content'
+  - 'update any group_node:city_code entity'
   - 'update any group_node:city_service content'
   - 'update any group_node:city_service entity'
   - 'update any group_node:development_permit content'
@@ -94,6 +112,8 @@ permissions:
   - 'update any group_node:notification entity'
   - 'update any group_node:page content'
   - 'update any group_node:page entity'
+  - 'update any group_node:policy content'
+  - 'update any group_node:policy entity'
   - 'update own group_media:audio content'
   - 'update own group_media:audio entity'
   - 'update own group_media:document content'
@@ -105,6 +125,10 @@ permissions:
   - 'update own group_media:video content'
   - 'update own group_media:video entity'
   - 'update own group_membership content'
+  - 'update own group_node:city_charter content'
+  - 'update own group_node:city_charter entity'
+  - 'update own group_node:city_code content'
+  - 'update own group_node:city_code entity'
   - 'update own group_node:city_service content'
   - 'update own group_node:city_service entity'
   - 'update own group_node:development_permit content'
@@ -117,6 +141,8 @@ permissions:
   - 'update own group_node:notification entity'
   - 'update own group_node:page content'
   - 'update own group_node:page entity'
+  - 'update own group_node:policy content'
+  - 'update own group_node:policy entity'
   - 'view group'
   - 'view group_media:audio content'
   - 'view group_media:audio entity'
@@ -129,6 +155,10 @@ permissions:
   - 'view group_media:video content'
   - 'view group_media:video entity'
   - 'view group_membership content'
+  - 'view group_node:city_charter content'
+  - 'view group_node:city_charter entity'
+  - 'view group_node:city_code content'
+  - 'view group_node:city_code entity'
   - 'view group_node:city_service content'
   - 'view group_node:city_service entity'
   - 'view group_node:development_permit content'
@@ -141,14 +171,19 @@ permissions:
   - 'view group_node:notification entity'
   - 'view group_node:page content'
   - 'view group_node:page entity'
+  - 'view group_node:policy content'
+  - 'view group_node:policy entity'
   - 'view unpublished group_media:audio entity'
   - 'view unpublished group_media:document entity'
   - 'view unpublished group_media:image entity'
   - 'view unpublished group_media:map entity'
   - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:city_charter entity'
+  - 'view unpublished group_node:city_code entity'
   - 'view unpublished group_node:city_service entity'
   - 'view unpublished group_node:development_permit entity'
   - 'view unpublished group_node:event entity'
   - 'view unpublished group_node:news entity'
   - 'view unpublished group_node:notification entity'
   - 'view unpublished group_node:page entity'
+  - 'view unpublished group_node:policy entity'
