--- a/web/sites/default/config/group.role.program-outsider.yml
+++ b/web/sites/default/config/group.role.program-outsider.yml
@@ -18,9 +18,12 @@ permissions:
   - 'view group_media:image entity'
   - 'view group_media:map entity'
   - 'view group_media:video entity'
+  - 'view group_node:city_charter entity'
+  - 'view group_node:city_code entity'
   - 'view group_node:city_service entity'
   - 'view group_node:development_permit entity'
   - 'view group_node:event entity'
   - 'view group_node:news entity'
   - 'view group_node:notification entity'
   - 'view group_node:page entity'
+  - 'view group_node:policy entity'
