--- a/web/sites/default/config/group.role.program-reviewer.yml
+++ b/web/sites/default/config/group.role.program-reviewer.yml
@@ -22,20 +22,26 @@ permissions:
   - 'view group_media:map entity'
   - 'view group_media:video entity'
   - 'view group_membership content'
+  - 'view group_node:city_charter entity'
+  - 'view group_node:city_code entity'
   - 'view group_node:city_service entity'
   - 'view group_node:development_permit entity'
   - 'view group_node:event entity'
   - 'view group_node:news entity'
   - 'view group_node:notification entity'
   - 'view group_node:page entity'
+  - 'view group_node:policy entity'
   - 'view unpublished group_media:audio entity'
   - 'view unpublished group_media:document entity'
   - 'view unpublished group_media:image entity'
   - 'view unpublished group_media:map entity'
   - 'view unpublished group_media:video entity'
+  - 'view unpublished group_node:city_charter entity'
+  - 'view unpublished group_node:city_code entity'
   - 'view unpublished group_node:city_service entity'
   - 'view unpublished group_node:development_permit entity'
   - 'view unpublished group_node:event entity'
   - 'view unpublished group_node:news entity'
   - 'view unpublished group_node:notification entity'
   - 'view unpublished group_node:page entity'
+  - 'view unpublished group_node:policy entity'
