POWR-1490 Update display mode

--- a/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.default.yml
@@ -76,8 +76,15 @@ content:
     weight: 0
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_summary:
