--- a/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
@@ -4,10 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.related
+    - field.field.node.service_location.field_body_content
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
     - field.field.node.service_location.field_legacy_path
+    - field.field.node.service_location.field_location
     - field.field.node.service_location.field_open_hours
+    - field.field.node.service_location.field_portlandmaps_id
+    - field.field.node.service_location.field_portlandmaps_layer
+    - field.field.node.service_location.field_service_location_type
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
@@ -33,10 +38,9 @@ third_party_settings:
     regions:
       second:
         - node_title
-        - field_open_hours
-        - field_building
-        - field_floor
+        - field_location
         - service_location_directions_link_entity_view_1
+        - field_open_hours
     fields:
       node_title:
         plugin_id: node_title
@@ -58,16 +62,24 @@ targetEntityType: node
 bundle: service_location
 mode: related
 content:
-  field_building:
-    weight: 2
-    label: hidden
-    settings:
-      view_mode: address
-      link: false
-    third_party_settings: {  }
+  field_location:
     type: entity_reference_entity_view
+    weight: 1
     region: second
-  field_floor:
+    label: above
+    settings:
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+  field_open_hours:
     weight: 3
     label: hidden
     settings:
@@ -75,23 +87,22 @@ content:
     third_party_settings: {  }
     type: string
     region: second
-  field_open_hours:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: second
   service_location_directions_link_entity_view_1:
-    weight: 4
+    weight: 2
     region: second
     settings: {  }
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_body_content: true
+  field_building: true
+  field_floor: true
   field_legacy_path: true
+  field_portlandmaps_id: true
+  field_portlandmaps_layer: true
+  field_service_location_type: true
   field_summary: true
   group_content: true
   links: true
+  locations_eva_service_locaton_map: true
   scheduled_publication: true
