--- a/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.teaser.yml
@@ -4,10 +4,15 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.node.teaser
+    - field.field.node.service_location.field_body_content
     - field.field.node.service_location.field_building
     - field.field.node.service_location.field_floor
     - field.field.node.service_location.field_legacy_path
+    - field.field.node.service_location.field_location
     - field.field.node.service_location.field_open_hours
+    - field.field.node.service_location.field_portlandmaps_id
+    - field.field.node.service_location.field_portlandmaps_layer
+    - field.field.node.service_location.field_service_location_type
     - field.field.node.service_location.field_summary
     - node.type.service_location
   module:
@@ -25,8 +30,7 @@ third_party_settings:
       content:
         - node_title
         - field_summary
-        - field_building
-        - field_floor
+        - field_location
         - field_open_hours
         - service_location_directions_link_entity_view_1
     fields:
@@ -50,26 +54,26 @@ targetEntityType: node
 bundle: service_location
 mode: teaser
 content:
-  field_building:
+  field_location:
     type: entity_reference_entity_view
     weight: 2
     region: content
-    label: hidden
+    label: above
     settings:
-      view_mode: address
+      view_mode: teaser
       link: false
-    third_party_settings: {  }
-  field_floor:
-    type: string
-    weight: 3
-    region: content
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_open_hours:
     type: string
-    weight: 4
+    weight: 3
     region: content
     label: hidden
     settings:
@@ -84,13 +88,20 @@ content:
       link_to_entity: false
     third_party_settings: {  }
   service_location_directions_link_entity_view_1:
-    weight: 5
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   content_moderation_control: true
+  field_body_content: true
+  field_building: true
+  field_floor: true
   field_legacy_path: true
+  field_portlandmaps_id: true
+  field_portlandmaps_layer: true
+  field_service_location_type: true
   group_content: true
   links: true
+  locations_eva_service_locaton_map: true
   scheduled_publication: true
