--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -8,7 +8,9 @@ dependencies:
     - field.field.node.page.field_body_content
     - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
+    - field.field.node.page.field_include_in_group_menu
     - field.field.node.page.field_legacy_path
+    - field.field.node.page.field_menu_link_text
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
@@ -33,18 +35,18 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 14
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   field_audience:
-    weight: 5
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_body_content:
-    weight: 8
+    weight: 10
     settings:
       rows: 5
       placeholder: ''
@@ -53,7 +55,7 @@ content:
     region: content
   field_featured_media:
     type: entity_browser_entity_reference
-    weight: 6
+    weight: 8
     settings:
       entity_browser: image_browser_embed
       field_widget_display: rendered_entity
@@ -66,12 +68,48 @@ content:
       open: false
     region: content
     third_party_settings: {  }
+  field_include_in_group_menu:
+    weight: 4
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_legacy_path:
-    weight: 10
+    weight: 12
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_menu_link_text:
+    weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings:
+      maxlength:
+        maxlength_js: 60
+        maxlength_js_label: 'Menu links should be shorter than @limit characters, remaining: <strong>@remaining</strong>'
+      conditional_fields:
+        993deee4-7b53-4d3d-a1b1-6b5e79ad6c19:
+          dependee: field_include_in_group_menu
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: show
+            effect_options: {  }
+            selector: ''
+            form_mode: default
+          entity_type: node
+          bundle: page
     type: string_textfield
     region: content
   field_page_type:
@@ -88,7 +126,7 @@ content:
     type: boolean_checkbox
     region: content
   field_related_content:
-    weight: 9
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -97,7 +135,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 16
+    weight: 18
     settings:
       match_operator: CONTAINS
       size: 60
@@ -106,7 +144,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 15
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -114,7 +152,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 7
+    weight: 9
     settings:
       rows: 2
       placeholder: ''
@@ -127,7 +165,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 4
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -143,13 +181,13 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 17
+    weight: 19
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -166,7 +204,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 13
+    weight: 15
     region: content
     settings:
       match_operator: CONTAINS
@@ -174,7 +212,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 12
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
