--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.node.page.field_body_content
     - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
+    - field.field.node.page.field_include_in_group_menu
     - field.field.node.page.field_legacy_path
+    - field.field.node.page.field_menu_link_text
     - field.field.node.page.field_page_type
     - field.field.node.page.field_popular
     - field.field.node.page.field_related_content
@@ -82,6 +84,24 @@ content:
             fi: false
             fi-def-at: false
     type: entity_reference_entity_view
+    region: content
+  field_include_in_group_menu:
+    weight: 4
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_menu_link_text:
+    weight: 5
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
   field_summary:
     type: string
