POWR-1438 Capture screenshot and HTML as artifacts after failed tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,6 +286,7 @@ run_tests: &run_tests
           # Log in via terminus first. Required for tests that require user login.
           terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email" && terminus aliases
           cd tests
+          
           # Split feature files by timing data so all split test jobs will finish around the same time
           TESTFILES=$(circleci tests glob "features/*.feature"  | circleci tests split --split-by=timings)
           if [[ $PANTHEON_ENV = "master" ]]; then
@@ -309,6 +310,7 @@ run_tests: &run_tests
         path: /var/www/html/artifacts/behat
     - store_artifacts:
         path: /var/www/html/artifacts
+        destination: /
 
 # Declare all of the jobs we should run.
 version: 2
