--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -17,6 +17,7 @@ default:
       # base_url: http://localhost
       # paths.base is the path with this config file
       files_path: /var/www/html/web/sites/default/files
+      browser_name: chrome
       sessions:
         default:
           goutte: ~
