POWR-1428 removed unneeded lines from migration config, enabled Groups field on policies content type, updated pathauto pattern to include policy category

--- a/web/sites/default/config/pathauto.pattern.policy.yml
+++ b/web/sites/default/config/pathauto.pattern.policy.yml
@@ -7,16 +7,16 @@ dependencies:
 id: policy
 label: 'Portland Policy Document'
 type: 'canonical_entities:node'
-pattern: 'policies/[node:field_policy_number]'
+pattern: 'policies/[node:field_policy_category]/[node:field_policy_number]'
 selection_criteria:
-  b5bb237d-b8e7-46f6-81d4-7581f59945bc:
+  9744c4d2-368f-47a8-a672-0596a16f509e:
     id: node_type
     bundles:
       policy: policy
     negate: false
     context_mapping:
       node: node
-    uuid: b5bb237d-b8e7-46f6-81d4-7581f59945bc
+    uuid: 9744c4d2-368f-47a8-a672-0596a16f509e
 selection_logic: and
 weight: -4
 relationships: {  }
