--- a/web/sites/default/config/core.entity_form_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.policy.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - chosen_field
     - content_moderation
     - entity_browser
+    - gcontent_field
     - maxlength
     - path
     - text
@@ -27,7 +28,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -55,7 +56,7 @@ content:
     region: content
     third_party_settings: {  }
   field_legacy_path:
-    weight: 6
+    weight: 7
     settings:
       size: 60
       placeholder: ''
@@ -86,7 +87,7 @@ content:
     type: chosen_select
     region: content
   field_reviewer:
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -94,15 +95,24 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  group_content:
+    type: group_selector_widget
+    weight: 6
+    region: content
+    settings:
+      widget: autocomplete
+      required: '1'
+      multiple: 0
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 8
+    weight: 9
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -119,7 +129,7 @@ content:
         maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -127,12 +137,11 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
-  group_content: true
   promote: true
   status: true
   sticky: true
