POWR-1428 reverted policy pathauto to original state, only using policy number not full title

--- a/web/sites/default/config/pathauto.pattern.portland_policy_document.yml
+++ b/web/sites/default/config/pathauto.pattern.portland_policy_document.yml
@@ -1,22 +1,22 @@
-uuid: b85371af-c05c-429a-bef3-f6ebf1420d6a
+uuid: a27cba85-a0c6-4368-9541-f77bc43a5691
 langcode: en
 status: true
 dependencies:
   module:
     - node
-id: policy
+id: portland_policy_document
 label: 'Portland Policy Document'
 type: 'canonical_entities:node'
-pattern: 'policies/[node:field_policy_number]'
+pattern: 'policies/[node:title]'
 selection_criteria:
-  46b0f413-e6ff-4acc-8661-9441cefec108:
+  ed402965-a328-46de-9006-1e73154d26df:
     id: node_type
     bundles:
       policy: policy
     negate: false
     context_mapping:
       node: node
-    uuid: 46b0f413-e6ff-4acc-8661-9441cefec108
+    uuid: ed402965-a328-46de-9006-1e73154d26df
 selection_logic: and
-weight: -4
+weight: -5
 relationships: {  }
