--- a/web/sites/default/config/views.view.group_pages_menu.yml
+++ b/web/sites/default/config/views.view.group_pages_menu.yml
@@ -10,7 +10,7 @@ dependencies:
     - portland
     - user
 id: group_pages_menu
-label: 'Group pages menu'
+label: 'Group: Pages Menu'
 module: views
 description: 'The group menu shown in the sidebar for Content entities.'
 tag: ''
@@ -590,6 +590,32 @@ display:
           exposed: false
           expose:
             label: ''
+          plugin_id: standard
+        field_menu_link_text_value:
+          id: field_menu_link_text_value
+          table: node__field_menu_link_text
+          field: field_menu_link_text_value
+          relationship: gc__node
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: standard
+        title:
+          id: title
+          table: node_field_data
+          field: title
+          relationship: gc__node
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: node
+          entity_field: title
           plugin_id: standard
       title: Menu
       header:
