POWR-1413 Park Taxonomy migration

--- a/web/modules/custom/portland_migrations/migrations/parks.yml
+++ b/web/modules/custom/portland_migrations/migrations/parks.yml
@@ -25,11 +25,11 @@ process:
   field_history/value: HistoricalInfo
   field_history/format:
     plugin: default_value
-    default_value: full_html
+    default_value: simplified_editor_with_media_embed
   field_body_content/value: ProgramInfo
   field_body_content/format:
     plugin: default_value
-    default_value: full_html
+    default_value: simplified_editor_with_media_embed
   # https://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&PropertyID=48
   field_legacy_path:
     plugin: concat
