--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -21,6 +21,7 @@ dependencies:
     - field.field.node.park_facility.field_portlandmaps_id
     - field.field.node.park_facility.field_portlandmaps_layer
     - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_reservations_available
     - field.field.node.park_facility.field_reviewer
     - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
@@ -46,7 +47,7 @@ content:
     type: text_default
     region: content
   field_body_content:
-    weight: 12
+    weight: 13
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -61,14 +62,14 @@ content:
     type: entity_reference_label
     region: content
   field_facebook:
-    weight: 15
+    weight: 16
     label: above
     settings: {  }
     third_party_settings: {  }
     type: twitter_embed
     region: content
   field_history:
-    weight: 13
+    weight: 14
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -83,13 +84,13 @@ content:
     region: content
   field_images:
     type: portland_plural_label
-    weight: 14
+    weight: 15
     label: above
     settings: {  }
     third_party_settings: {  }
     region: content
   field_instagram:
-    weight: 17
+    weight: 18
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -159,6 +160,14 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_reservations_available:
+    weight: 12
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_size_in_acres:
     weight: 9
     label: hidden
@@ -171,7 +180,7 @@ content:
     type: number_decimal
     region: content
   field_twitter:
-    weight: 16
+    weight: 17
     label: above
     settings: {  }
     third_party_settings: {  }
