--- a/web/modules/custom/portland_migrations/migrations/park_amenities.yml
+++ b/web/modules/custom/portland_migrations/migrations/park_amenities.yml
@@ -8,14 +8,25 @@ source:
   path: modules/custom/portland_migrations/sources/park_amenities.csv
   header_row_count: 1
   keys:
-    - AMENITY_NAME
+    - PropertyID
+    - AmenityTypeId
 process:
-  vid:
-    plugin: default_value
-    default_value: park_amenities_activities
-  name: AMENITY_NAME
-  # field_policy_type_code: TYPE_CODE
-  # description: DESCRIPTION
+  nid:
+    plugin: lookup_park_id
+    source: PropertyID
+  field_park_location_type:
+    plugin: migrate_park_location_type
+    source: Amenity
+  field_reservations_available:
+    plugin: migrate_park_reservation_type
+    source: Amenity
+  field_park_amenities_activities:
+    plugin: migrate_park_amenity
+    source: Amenity
 destination:
-  plugin: 'entity:taxonomy_term'
-  default_bundle: park_amenities_activities
+  plugin: 'entity:node'
+  default_bundle: park_facility
+  overwrite_properties:
+    - field_park_amenities_activities
+    - field_park_location_type
+    - field_reservations_available
