--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -22,6 +22,7 @@ dependencies:
     - field.field.node.park_facility.field_portlandmaps_id
     - field.field.node.park_facility.field_portlandmaps_layer
     - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_reservations_available
     - field.field.node.park_facility.field_reviewer
     - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
@@ -44,12 +45,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 20
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
   field_alert_text:
-    weight: 15
+    weight: 16
     settings:
       rows: 3
       placeholder: ''
@@ -90,7 +91,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_facebook:
-    weight: 27
+    weight: 28
     settings:
       size: 60
       placeholder: ''
@@ -98,7 +99,7 @@ content:
     type: string_textfield
     region: content
   field_history:
-    weight: 13
+    weight: 14
     settings:
       rows: 5
       placeholder: ''
@@ -131,7 +132,7 @@ content:
     region: content
   field_images:
     type: entity_browser_entity_reference
-    weight: 12
+    weight: 13
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -145,7 +146,7 @@ content:
     region: content
     third_party_settings: {  }
   field_instagram:
-    weight: 29
+    weight: 30
     settings:
       size: 60
       placeholder: ''
@@ -153,7 +154,7 @@ content:
     type: string_textfield
     region: content
   field_legacy_path:
-    weight: 18
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -167,7 +168,7 @@ content:
     type: chosen_select
     region: content
   field_location_status:
-    weight: 14
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -206,7 +207,7 @@ content:
     type: options_select
     region: content
   field_portlandmaps_id:
-    weight: 17
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -217,7 +218,7 @@ content:
     type: string_textfield
     region: content
   field_portlandmaps_layer:
-    weight: 16
+    weight: 17
     settings:
       size: 60
       placeholder: ''
@@ -231,8 +232,14 @@ content:
     third_party_settings: {  }
     type: number
     region: content
+  field_reservations_available:
+    weight: 12
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   field_reviewer:
-    weight: 24
+    weight: 25
     settings:
       match_operator: CONTAINS
       size: 60
@@ -241,7 +248,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 26
+    weight: 27
     settings:
       size: 60
       placeholder: ''
@@ -256,7 +263,7 @@ content:
     type: number
     region: content
   field_twitter:
-    weight: 28
+    weight: 29
     settings:
       size: 60
       placeholder: ''
@@ -272,13 +279,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 23
+    weight: 24
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 21
+    weight: 22
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -286,7 +293,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 25
+    weight: 26
     region: content
     third_party_settings: {  }
   title:
@@ -302,7 +309,7 @@ content:
         maxlength_js_label: 'Google will display search results at about @limit characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 19
+    weight: 20
     settings:
       match_operator: CONTAINS
       size: 60
@@ -310,7 +317,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 22
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
