POWR-1413 Migrate park photos and documents.

--- a/web/modules/custom/portland_migrations/migrations/parks.yml
+++ b/web/modules/custom/portland_migrations/migrations/parks.yml
@@ -12,6 +12,8 @@ source:
   header_row_count: 1
   constants:
     legacy_path_prefix: 'https://www.portlandoregon.gov/parks/finder/index.cfm?action=ViewPark&PropertyID='
+    portlandmaps_layer: 'https://www.portlandmaps.com/arcgis/rest/services/Public/Basemap_Color/MapServer/2'
+    portlandmaps_id_prefix: 'PropertyID='
   keys:
     - PropertyID
 
@@ -36,10 +38,16 @@ process:
     source:
       - 'constants/legacy_path_prefix'
       - PropertyID
-  field_hours_of_operation: SpecialInfo
+  # field_hours_of_operation: SpecialInfo
   field_property_id: PropertyID
   field_size_in_acres: OwnedAcres
   field_year_acquired: YearAcquired
+  field_portlandmaps_layer: 'constants/portlandmaps_layer'
+  field_portlandmaps_id:
+    plugin: concat
+    source:
+      - 'constants/portlandmaps_id_prefix'
+      - PropertyID
 destination:
   plugin: 'entity:node'
   default_bundle: park_facility
