--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.park_facility.field_alert_text
     - field.field.node.park_facility.field_body_content
     - field.field.node.park_facility.field_city_section
+    - field.field.node.park_facility.field_documents
     - field.field.node.park_facility.field_facebook
     - field.field.node.park_facility.field_history
     - field.field.node.park_facility.field_hours_of_operation
@@ -45,12 +46,12 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 21
+    weight: 22
     region: content
     settings: {  }
     third_party_settings: {  }
   field_alert_text:
-    weight: 16
+    weight: 17
     settings:
       rows: 3
       placeholder: ''
@@ -90,8 +91,23 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_documents:
+    type: entity_browser_entity_reference
+    weight: 14
+    settings:
+      entity_browser: document_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      field_widget_replace: false
+      open: false
+    region: content
+    third_party_settings: {  }
   field_facebook:
-    weight: 28
+    weight: 29
     settings:
       size: 60
       placeholder: ''
@@ -99,7 +115,7 @@ content:
     type: string_textfield
     region: content
   field_history:
-    weight: 14
+    weight: 15
     settings:
       rows: 5
       placeholder: ''
@@ -134,19 +150,19 @@ content:
     type: entity_browser_entity_reference
     weight: 13
     settings:
-      entity_browser: media_browser
+      entity_browser: image_browser_embed
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
-      open: true
       field_widget_replace: false
+      open: false
     region: content
     third_party_settings: {  }
   field_instagram:
-    weight: 30
+    weight: 31
     settings:
       size: 60
       placeholder: ''
@@ -154,7 +170,7 @@ content:
     type: string_textfield
     region: content
   field_legacy_path:
-    weight: 19
+    weight: 20
     settings:
       size: 60
       placeholder: ''
@@ -168,7 +184,7 @@ content:
     type: chosen_select
     region: content
   field_location_status:
-    weight: 15
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -207,7 +223,7 @@ content:
     type: options_select
     region: content
   field_portlandmaps_id:
-    weight: 18
+    weight: 19
     settings:
       size: 60
       placeholder: ''
@@ -218,7 +234,7 @@ content:
     type: string_textfield
     region: content
   field_portlandmaps_layer:
-    weight: 17
+    weight: 18
     settings:
       size: 60
       placeholder: ''
@@ -239,7 +255,7 @@ content:
     type: chosen_select
     region: content
   field_reviewer:
-    weight: 25
+    weight: 26
     settings:
       match_operator: CONTAINS
       size: 60
@@ -248,7 +264,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 27
+    weight: 28
     settings:
       size: 60
       placeholder: ''
@@ -263,7 +279,7 @@ content:
     type: number
     region: content
   field_twitter:
-    weight: 29
+    weight: 30
     settings:
       size: 60
       placeholder: ''
@@ -279,13 +295,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 24
+    weight: 25
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 22
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -293,7 +309,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 26
+    weight: 27
     region: content
     third_party_settings: {  }
   title:
@@ -309,7 +325,7 @@ content:
         maxlength_js_label: 'Google will display search results at about @limit characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 20
+    weight: 21
     settings:
       match_operator: CONTAINS
       size: 60
@@ -317,7 +333,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 23
+    weight: 24
     region: content
     settings: {  }
     third_party_settings: {  }
