--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.park_facility.field_alert_text
     - field.field.node.park_facility.field_body_content
     - field.field.node.park_facility.field_city_section
+    - field.field.node.park_facility.field_documents
     - field.field.node.park_facility.field_facebook
     - field.field.node.park_facility.field_history
     - field.field.node.park_facility.field_hours_of_operation
@@ -30,8 +31,8 @@ dependencies:
     - node.type.park_facility
   module:
     - ds
+    - media
     - media_entity_twitter
-    - portland
     - text
     - user
 id: node.park_facility.default
@@ -61,8 +62,25 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_facebook:
+  field_documents:
     weight: 16
+    label: above
+    settings:
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
+    region: content
+  field_facebook:
+    weight: 17
     label: above
     settings: {  }
     third_party_settings: {  }
@@ -83,14 +101,16 @@ content:
     type: text_default
     region: content
   field_images:
-    type: portland_plural_label
+    type: media_thumbnail
     weight: 15
     label: above
-    settings: {  }
+    settings:
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
     region: content
   field_instagram:
-    weight: 18
+    weight: 19
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -180,7 +200,7 @@ content:
     type: number_decimal
     region: content
   field_twitter:
-    weight: 17
+    weight: 18
     label: above
     settings: {  }
     third_party_settings: {  }
