POWR-1473 Config changes

--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.featured.yml
@@ -44,11 +44,14 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
+        attributes: role|button
+        link_attribute: content
         link_custom: ''
         classes:
-          layout_class: {  }
+          layout_class:
+            card--featured--group: card--featured--group
+          first: {  }
+          second: {  }
     regions:
       first:
         - field_featured_media
