--- a/web/sites/default/config/core.entity_view_display.group.program.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.featured.yml
@@ -42,16 +42,26 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
+        attributes: role|button
         link_attribute: ''
         link_custom: ''
         classes:
-          layout_class: {  }
+          layout_class:
+            card--featured--group: card--featured--group
+          first: {  }
+          second: {  }
     regions:
       first:
         - field_featured_media
       second:
+        - 'bundle_field:group'
         - label
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 1
+        label: hidden
+        formatter: default
 id: group.program.featured
 targetEntityType: group
 bundle: program
@@ -75,7 +85,7 @@ content:
     region: first
   label:
     type: string
-    weight: 1
+    weight: 2
     region: second
     label: hidden
     settings:
