--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -35,22 +35,24 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
+        attributes: role|button
+        link_attribute: content
         link_custom: ''
         classes:
           layout_class: {  }
+          first: {  }
+          second: {  }
     regions:
       first:
         - field_featured_media
       second:
-        - node_title
         - field_published_on
+        - node_title
         - field_summary
     fields:
       node_title:
         plugin_id: node_title
-        weight: 1
+        weight: 2
         label: hidden
         formatter: default
         settings:
@@ -86,9 +88,9 @@ content:
             classes: {  }
   field_published_on:
     type: datetime_default
-    weight: 2
+    weight: 1
     region: second
-    label: inline
+    label: hidden
     settings:
       timezone_override: ''
       format_type: month_day_year
