--- a/web/sites/default/config/core.entity_view_display.node.news.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.related.yml
@@ -35,11 +35,13 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
+        attributes: role|button
+        link_attribute: content
         link_custom: ''
         classes:
           layout_class: {  }
+          first: {  }
+          second: {  }
     regions:
       first:
         - field_featured_media
