--- a/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.search_result.yml
@@ -40,6 +40,8 @@ third_party_settings:
         link_custom: ''
         classes:
           layout_class: {  }
+          first: {  }
+          second: {  }
     regions:
       second:
         - 'bundle_field:node'
@@ -103,7 +105,7 @@ content:
     type: datetime_default
     weight: 2
     region: second
-    label: inline
+    label: visually_hidden
     settings:
       timezone_override: ''
       format_type: month_day_year
