--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -63,7 +63,7 @@ content:
         ft:
           id: default
           settings:
-            lb: Featured
+            lb: 'Services and information'
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
@@ -80,7 +80,7 @@ content:
         ft:
           id: default
           settings:
-            lb: 'Programs and projects'
+            lb: Featured
             lb-col: false
             classes: {  }
     type: entity_reference_entity_view
