--- a/web/sites/default/config/core.entity_view_display.group.project.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.featured.yml
@@ -4,7 +4,11 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.group.featured
+    - field.field.group.project.field_address
     - field.field.group.project.field_audience
+    - field.field.group.project.field_display_date
+    - field.field.group.project.field_display_date_toggle
+    - field.field.group.project.field_email
     - field.field.group.project.field_enable_documents_menu_item
     - field.field.group.project.field_enable_events_menu_item
     - field.field.group.project.field_enable_guides_and_informat
@@ -15,7 +19,9 @@ dependencies:
     - field.field.group.project.field_featured_groups
     - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
+    - field.field.group.project.field_map
     - field.field.group.project.field_parent_group
+    - field.field.group.project.field_phone
     - field.field.group.project.field_project_status
     - field.field.group.project.field_project_type
     - field.field.group.project.field_search_keywords
@@ -38,16 +44,26 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
+        attributes: role|button
         link_attribute: ''
         link_custom: ''
         classes:
-          layout_class: {  }
+          layout_class:
+            card--featured--group: card--featured--group
+          first: {  }
+          second: {  }
     regions:
       first:
         - field_featured_media
       second:
+        - 'bundle_field:group'
         - label
+    fields:
+      'bundle_field:group':
+        plugin_id: 'bundle_field:group'
+        weight: 1
+        label: hidden
+        formatter: default
 id: group.project.featured
 targetEntityType: group
 bundle: project
@@ -71,7 +87,7 @@ content:
     region: first
   label:
     type: string
-    weight: 1
+    weight: 2
     region: second
     label: hidden
     settings:
@@ -108,7 +124,11 @@ content:
 hidden:
   changed: true
   created: true
+  field_address: true
   field_audience: true
+  field_display_date: true
+  field_display_date_toggle: true
+  field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
   field_enable_guides_and_informat: true
@@ -118,7 +138,9 @@ hidden:
   field_featured_content: true
   field_featured_groups: true
   field_legacy_path: true
+  field_map: true
   field_parent_group: true
+  field_phone: true
   field_project_status: true
   field_project_type: true
   field_search_keywords: true
