--- a/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.featured.yml
@@ -32,18 +32,27 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
+        attributes: role|button
+        link_attribute: content
         link_custom: ''
         classes:
-          layout_class: {  }
+          layout_class:
+            card--featured--group: card--featured--group
+          first: {  }
+          second: {  }
     regions:
       second:
+        - 'bundle_field:node'
         - node_title
     fields:
+      'bundle_field:node':
+        plugin_id: 'bundle_field:node'
+        weight: 0
+        label: hidden
+        formatter: default
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 1
         label: hidden
         formatter: default
         settings:
