--- a/web/sites/default/config/core.entity_view_display.node.page.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.related.yml
@@ -32,20 +32,24 @@ third_party_settings:
           first: div
           second: div
         outer_wrapper: div
-        attributes: ''
-        link_attribute: ''
+        attributes: role|button
+        link_attribute: content
         link_custom: ''
         classes:
-          layout_class: {  }
+          layout_class:
+            card--related--group: card--related--group
+          first: {  }
+          second: {  }
     regions:
       first:
         - field_featured_media
       second:
+        - field_page_type
         - node_title
     fields:
       node_title:
         plugin_id: node_title
-        weight: 0
+        weight: 2
         label: hidden
         formatter: default
         settings:
@@ -79,13 +83,27 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+  field_page_type:
+    type: entity_reference_label
+    weight: 1
+    region: second
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 hidden:
   content_moderation_control: true
   field_audience: true
   field_body_content: true
   field_group: true
   field_legacy_path: true
-  field_page_type: true
   field_popular: true
   field_related_content: true
   field_reviewer: true
