--- a/web/sites/default/config/ds.settings.yml
+++ b/web/sites/default/config/ds.settings.yml
@@ -3,7 +3,9 @@ field_template: true
 ft-default: default
 ft-show-colon: false
 classes:
-  region: {  }
+  region:
+    - card--featured--group
+    - card--related--group
   field: {  }
 use_field_names: true
 _core:
