POWR-1473 Config changes I missed the first time

--- a/web/sites/default/config/core.entity_view_display.group.program.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.featured.yml
@@ -43,7 +43,7 @@ third_party_settings:
           second: div
         outer_wrapper: div
         attributes: role|button
-        link_attribute: ''
+        link_attribute: content
         link_custom: ''
         classes:
           layout_class:
