--- a/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
@@ -33,7 +33,7 @@ third_party_settings:
           second: div
         outer_wrapper: div
         attributes: role|button
-        link_attribute: ''
+        link_attribute: content
         link_custom: ''
         classes:
           layout_class:
