POWR-1517 refactor environment switcher colors

--- a/web/sites/default/config/environment_indicator.switcher.live.yml
+++ b/web/sites/default/config/environment_indicator.switcher.live.yml
@@ -4,7 +4,7 @@ status: true
 dependencies: {  }
 machine: live
 description: null
-name: Live
+name: Production
 url: 'https://beta.portland.gov'
 fg_color: '#ffffff'
 bg_color: '#dc3545'
