POWR-1413 Migrate park locations.

--- a/web/modules/custom/portland_migrations/migrations/park_amenities.yml
+++ b/web/modules/custom/portland_migrations/migrations/park_amenities.yml
@@ -29,3 +29,6 @@ destination:
     - field_park_amenities_activities
     - field_park_location_type
     - field_reservations_available
+migration_dependencies:
+  required:
+    - parks
