--- a/web/modules/custom/portland_migrations/migrations/park_documents.yml
+++ b/web/modules/custom/portland_migrations/migrations/park_documents.yml
@@ -19,3 +19,6 @@ destination:
   default_bundle: park_facility
   overwrite_properties:
     - field_documents
+migration_dependencies:
+  required:
+    - parks
