--- a/web/modules/custom/portland_migrations/migrations/parks.yml
+++ b/web/modules/custom/portland_migrations/migrations/parks.yml
@@ -22,7 +22,9 @@ process:
     plugin: default_value
     default_value: 1
   title: Property
-  # field_city_section: SubArea
+  # field_city_section: 
+  #   plugin: migrate_park_subarea
+  #   source: SubArea
   field_facebook: Facebook
   field_history/value: HistoricalInfo
   field_history/format:
@@ -38,7 +40,13 @@ process:
     source:
       - 'constants/legacy_path_prefix'
       - PropertyID
-  # field_hours_of_operation: SpecialInfo
+  field_hours_of_operation/value: SpecialInfo
+  field_hours_of_operation/format:
+    plugin: default_value
+    default_value: simplified_editor_with_media_embed
+  field_park_address_or_entrance:
+    plugin: migrate_park_address
+    source: Address
   field_property_id: PropertyID
   field_size_in_acres: OwnedAcres
   field_year_acquired: YearAcquired
